# tess-two

tess-two/jni/com_googlecode_leptonica_android/: Android.mk
tess-two/jni/com_googlecode_leptonica_android/src/: .gitignore  CMakeLists.txt  arm.winrt.toolchain.cmake  build.sh  configure.ac
tess-two/jni/com_googlecode_leptonica_android/src/config/: config.h.cmake  config.h.in
tess-two/jni/com_googlecode_leptonica_android/src/src/: CMakeLists.txt  leptwin.c  leptwin.h  sarray.c  utils.c
tess-two/jni/com_googlecode_tesseract_android/: Android.mk
tess-two/jni/com_googlecode_tesseract_android/src/: .gitignore  CMakeLists.txt  Makefile.am  arm.winrt.toolchain.cmake  build.sh  cmake_winrt.cmd  configure.ac
tess-two/jni/com_googlecode_tesseract_android/src/api/: CMakeLists.txt  baseapi.cpp
tess-two/jni/com_googlecode_tesseract_android/src/ccmain/: CMakeLists.txt  cube_control.cpp  cube_reco_context.cpp  cube_reco_context.h  equationdetect.cpp  tesseract_cube_combiner.cpp  tesseract_cube_combiner.h
tess-two/jni/com_googlecode_tesseract_android/src/ccstruct/: CMakeLists.txt
tess-two/jni/com_googlecode_tesseract_android/src/ccutil/: CMakeLists.txt  Makefile.am  ccutil.cpp  ccutil.h  host.h  mainblk.cpp  params.cpp  tprintf.cpp
tess-two/jni/com_googlecode_tesseract_android/src/classify/: CMakeLists.txt
tess-two/jni/com_googlecode_tesseract_android/src/cube/: CMakeLists.txt  bmp_8.cpp  cached_file.cpp  cached_file.h  char_bigrams.cpp  char_bigrams.h  char_samp.cpp  char_samp.h  char_samp_set.cpp  char_samp_set.h  classifier_base.h  classifier_factory.cpp  classifier_factory.h  conv_net_classifier.cpp  conv_net_classifier.h  cube_tuning_params.cpp  cube_tuning_params.h  cube_utils.cpp  cube_utils.h  feature_chebyshev.cpp  feature_chebyshev.h  hybrid_neural_net_classifier.cpp  hybrid_neural_net_classifier.h  string_32.h  tess_lang_model.cpp  tess_lang_model.h  tuning_params.h  word_altlist.cpp  word_list_lang_model.cpp  word_list_lang_model.h  word_size_model.cpp  word_size_model.h  word_unigrams.cpp  word_unigrams.h
tess-two/jni/com_googlecode_tesseract_android/src/cutil/: CMakeLists.txt  callcpp.cpp
tess-two/jni/com_googlecode_tesseract_android/src/dict/: CMakeLists.txt
tess-two/jni/com_googlecode_tesseract_android/src/image/: CMakeLists.txt
tess-two/jni/com_googlecode_tesseract_android/src/neural_networks/runtime/: CMakeLists.txt  input_file_buffer.h  neural_net.cpp  neural_net.h  neuron.h
tess-two/jni/com_googlecode_tesseract_android/src/textord/: CMakeLists.txt
tess-two/jni/com_googlecode_tesseract_android/src/viewer/: CMakeLists.txt  fake_semaphore.h  svutil.h
tess-two/jni/com_googlecode_tesseract_android/src/vs2008/port/: gettimeofday.cpp  gettimeofday.h
tess-two/jni/com_googlecode_tesseract_android/src/wordrec/: CMakeLists.txt
